[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/soul_orb_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/SoulOrb.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="SoulOrb" type="Area2D" groups=["AddMana"]]
position = Vector2( 0, 25 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )

[node name="DestroyedTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_SoulOrb_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
